--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script>
-        window.useExperimental = true;
+        window.useExperimental = false;
 
         /*
         Priority levels:
